Correct fixed header, will not overlap other content and calls to correct place on page using nav

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,11 +14,17 @@ Also removes default border, padding and margins */
 /* nav bar styling */
 
 header {
-    position: relative;
+    position: fixed;
     z-index: 2;
     width: 100%;
-    height: 50px;
     background-color: white;
+    height: 50px;
+    top: 0;
+    border-bottom: 1px solid #003b49;
+}
+
+body {
+    margin-top: 50px;
 }
 
 #title {
